DHFPROD-926 fix QuickStart UI style issues
These issues occurred after upgrading to Angular 6. Our MDL library does not currently support Angular 6.

- Remove extra spacing on sides of folder browser
- Adjust bottom border in selected text fields

--- a/quick-start/src/main/ui/app/mlcp-ui/mlcp-ui.component.scss
+++ b/quick-start/src/main/ui/app/mlcp-ui/mlcp-ui.component.scss
@@ -103,3 +103,7 @@ $easingFunc: ease-in-out;
 /deep/ mdl-button.mdl-button.mdl-button--raised.mdl-button--primary.error-button {
   background-color: $error;
 }
+
+/deep/ .mdl-textfield__label:after {
+  bottom: 12px;
+}
